1.04   2025-10-18
    [Features]
    - Added jq-compatible --null-input (-n) option to jq-lite so filters can
      run against null without providing input data.

    [Refactor]
    - Refactored JQ::Lite to delegate query parsing and filter execution to
      dedicated modules, keeping only orchestration logic in the main package.
    - Introduced JQ::Lite::Parser to normalize query strings before execution,
      handling trimming and shorthand conversions such as `.[]` into flatten
      semantics.
    - Centralized jq-style filter implementations in JQ::Lite::Filters, wiring
      each command to shared utility routines and standardizing result handling.
    - Moved shared helper functions into JQ::Lite::Util, consolidating common
      operations like assignments, traversal, and numeric utilities.

    [Maintenance]
    - Improved internal structure for clarity, maintainability, and easier
      extension of jq-compatible features in future releases.
    - No user-facing behavior changes; this refactor is fully backward
      compatible.

1.02   2025-10-16
    [Maintenance]
    - Promote the release version to 1.02 to ensure Perl's version parsing
      keeps this release newer than the historical 0.99.
    [Feature]
    - Added fromjson() helper to decode JSON text back into native data
      structures, mirroring jq's behaviour and complementing tojson().
    - Implemented jq's `//` alternative operator so pipelines can fall back to
      secondary expressions when the primary value is null or missing.
    [Tests]
    - Added regression coverage asserting fromjson() handles objects, arrays,
      invalid JSON text, and null propagation.
    - Added coalesce-focused regression tests covering literals, booleans, and
      chained fallbacks.
    [Docs]
    - Documented fromjson() across README, CLI helper listings, and module POD.
    - Documented the new alternative operator in README, CLI help, and module
      POD alongside examples.

1.01   2025-10-16